tests/typechecking/valid/if1.ml
if (9=9) then
print_int(9)
else
print_int(5)
