tests/typechecking/invalid/if4.ml
if 5-5 then
print_int(9)
else
print_int(5)
